objects/vlocity_cmt__Premises__c.object
<CustomObject>
    <description>A complex, building or house, together with its land and outbuildings, occupied by businesses or tenants.  In the communications and media industry, it may be a location where services such as wired phone or cable TV services are provided to customers.  A premises record may optionally represent a location within a premises, such as a particular building on a property, a floor of a building, or some other subset of the larger premises where equipment may be deployed.</description>
    <fields>
        <fullName>Altura__c</fullName>
        <inlineHelpText>En este campo se enviará el valor de la Altura o Kilómetro si se trata de Ruta o Río</inlineHelpText>
        <label>Altura</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Codigo_Calle_Rio_1__c</fullName>
        <label>Codigo Calle Rio 1</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Codigo_Calle_Rio_2__c</fullName>
        <label>Codigo Calle Rio 2</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Codigo_Calle_Rio_de_atras__c</fullName>
        <label>Codigo Calle Rio de atras</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Codigo_Calle__c</fullName>
        <label>Codigo Calle</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Codigo_Localidad__c</fullName>
        <label>Codigo Localidad</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Codigo_Tipo_de_Zona__c</fullName>
        <label>Codigo Tipo de Zona</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Departamento__c</fullName>
        <label>Departamento</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Edificio__c</fullName>
        <label>Edificio</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lote__c</fullName>
        <label>Lote</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manzana__c</fullName>
        <label>Manzana</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Numero_de_piso__c</fullName>
        <inlineHelpText>Acepta valores numéricos positivos o negativos (-n) también decimales (#.#) y los siguientes valores:  EP (Entre Piso), PB (Planta Baja), SS (Sub Suelo)</inlineHelpText>
        <label>Numero de piso</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ActivationDate__c</fullName>
        <description>Date of Premises activation</description>
        <inlineHelpText>Date of Premises activation</inlineHelpText>
        <label>Activation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AlternateCity__c</fullName>
        <label>Alternate City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AlternateCountry__c</fullName>
        <label>Alternate Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AlternatePostalCode__c</fullName>
        <label>Alternate Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AlternateState__c</fullName>
        <label>Alternate State</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AlternateStreetAddress__c</fullName>
        <label>Alternate Street Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AutoNumber__c</fullName>
        <label>Auto Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__City__c</fullName>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Country__c</fullName>
        <label>Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Geolocation__c</fullName>
        <label>Geolocation</label>
        <scale>15</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ParentPremisesId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Premises</label>
        <referenceTo>vlocity_cmt__Premises__c</referenceTo>
        <relationshipLabel>Child Premises</relationshipLabel>
        <relationshipName>Premises</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PostalCode__c</fullName>
        <label>Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PremisesIdentifier__c</fullName>
        <description>Defined as &apos;external id&quot; so ID to be used especially for integration to outside systems.</description>
        <externalId>true</externalId>
        <label>Premises Identifier</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PremisesNumber__c</fullName>
        <description>Potentially an external id</description>
        <label>Premises Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PremisesType__c</fullName>
        <label>Premises Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Duplex</fullName>
                </value>
                <value>
                    <fullName>Condominium</fullName>
                </value>
                <value>
                    <fullName>Commercial Building</fullName>
                </value>
                <value>
                    <fullName>Floor</fullName>
                </value>
                <value>
                    <fullName>Floor Section</fullName>
                </value>
                <value>
                    <fullName>Apartment Building</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__State__c</fullName>
        <label>State</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Connected</fullName>
                    <default>true</default>
                    <label>Connected</label>
                </value>
                <value>
                    <fullName>Vacant</fullName>
                </value>
                <value>
                    <fullName>Install in Progress</fullName>
                </value>
                <value>
                    <fullName>Planned</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StreetAddress__c</fullName>
        <label>Street Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Premises</label>
    <listViews>
        <fullName>vlocity_cmt__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Premises</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>